<resources>
    <string name="app_name">Homework4</string>
    <string name="dish">Dish</string>
    <string name="addIngedrients">Add Ingedrients</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dishNameHint">Eg:Omlete</string>
    <string name="IngredientHint">Eg:Onions</string>
</resources>
